# cocos2d-console

./: .gitignore  README.md  config.json  download-bin.py
console/: cocos2d.ini  cocos2d.py  cocos2d_compile.py  cocos2d_dist.py  cocos2d_install.py  cocos2d_jscompile.py  cocos2d_luacompile.py  cocos2d_new.py  cocos2d_version.py  jscompile.py
console/plugins/: plugin_jscompile.py
plugins/: __init__.py  plugin_clean.py  plugin_compile.py  plugin_deploy.py  plugin_dgate.py  plugin_dist.py  plugin_install.py  plugin_new.py  plugin_run.py  plugin_test.py  plugin_update.py  plugin_version.py  project_deploy.py
plugins/framework/: framework_add.py  framework_create.py  framework_remove.py  framework_set.py  framework_update.py  plugin_framework.py
plugins/framework_add/: __init__.py  framework_add.py
plugins/package/: how-to-use-package_CN.md  package_info.py  package_install.py  package_list.py  package_search.py  plugin_package.py
plugins/package_common/: __init__.py  install_helper.py  package_common.py  package_helper.py  project_helper.py
plugins/package_info/: __init__.py  package_info.py
plugins/package_install/: __init__.py  package_install.py
plugins/package_list/: __init__.py  package_list.py
plugins/package_search/: __init__.py  package_search.py
plugins/plugin_compile/: build_android.py  project_compile.py
plugins/plugin_generate/: __init__.py  gen_libs.py  gen_prebuilt_mk.py  gen_simulator.py  gen_templates.py  modify_template.py
plugins/plugin_jscompile/: __init__.py
plugins/plugin_jscompile/jsbcc_source/: CMakeLists.txt  README  jsbcc-vc2012.sln  jsbcc-vc2012.vcxproj
plugins/plugin_jscompile/jsbcc_source/jsbcc.xcodeproj/: project.pbxproj
plugins/plugin_luacompile/: __init__.py
plugins/plugin_new/: __init__.py  plugin_new.py  project_new.py
plugins/plugin_package/: cocospackage  cocospackage.bat  cocospackage.py  plugin_package.py  sdkbox  sdkbox.bat
plugins/plugin_run/: project_run.py
plugins/project_compile/: build_android.py  project_compile.py
plugins/project_new/: core.py  env.json  (+4 more)
toexec/: build_console.py  config.json
(+33 files in other folders)
